--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "silex/silex": "~1.3",
         "twig/twig": "^1.22",
         "guzzlehttp/guzzle": "^6.1",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "league/csv": "^7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
