--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "~3.3.5",
     "fontawesome": "~4.4.0",
     "angular-ladda": "~0.3.1",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "angular-nvd3": "~1.0.2"
   }
 }
