--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "fontawesome": "~4.4.0",
     "angular-ladda": "~0.3.1",
     "lodash": "~3.10.1",
-    "angular-nvd3": "1.0.3",
-    "nvd3": "~1.8.1"
+    "angular-nvd3": "~1.0.2",
+    "nvd3": "~1.8.1",
+    "spinkit": "~1.2.2"
   }
 }
