--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "league/csv": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0",
+        "symfony/browser-kit": "^2.7",
+        "symfony/css-selector": "^2.7"
     }
 }
